--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "simplesoftwareio/simple-qrcode": "1.3.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
