完成优惠券分享图片的功能

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
             "database/seeds",
             "database/factories"
         ],
+        "files": [
+            "app/Helpers/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         }
